v.4.0.0

- **REQUIRED VERSION OF GECKOLIB IS NOW 3.0.32**
- **RESET YOUR CONFIGS**
- Added the Sentinel Hammer!
- Added the Tyrant, thanks to Creeper2545 for the models base and Pedroca for the texture!
- Added the Possessed Worker, thanks to Undeadmonkey for the model and Pedroca for the texture!
- Added the Arachnotron Eternal, thanks to Creman for the model and Pedroca for the texture!
- Added the Spider Mastermind, thanks to TearsOfLov for the texture and model touch ups!
- Added the Pinky 2016/Eternal, thanks to Batpixxler!
- Added a Pinky 2016/Eternal variant to the Spectre!
- Added the Whiplash, thanks to Batpixxler!
- Added the Arch-vile Eternal, thanks to ssap!
- Added the Tentacle, thanks to Crydigo!
- Added the Totem Block, thanks to Pedroca!
- Added the Turret, thanks to Pedroca!
- Added the Doom Hunter, thanks to Batpixxler!
- Added the Mother Demon, thanks to Batpixxler!
- Added the Summoner, thanks to Pedroca for the texture!
- Added the Baron 2016, thanks to Batpixxler!
- Added the Fireborne Baron, thanks to Batpixxler!
- Added the Armored Baron, thanks to Batpixxler!
- Updated the Unwilling model, thanks to Undeadmonkey for the model and Pedroca for the texture!
- Updated the Gargoyle model and texture, thanks to Batpixxler!
- Added all new Patchouli book entries as well as a few missing ones.
- Added new Structures! 
	- The End will now generate a structure dedicated to the Maykrs and the only place they will spawn!* 
	- The Nether will now generate Titan skulls, that show signs of being transformed into a place of worship though it seems they were abandoned.**
	- The Overworld will now generate massive portals, similar to ruined portals but bigger and can spawn the mods mobs.***
- Added the Gun Crafter, which is how you will now craft all MCDoom weapons, textured by Pedroca!
- Added Advancements for the 3 new Doom structures, Argent Energy/Plate, and summoning/killing the Icon of Sin.
- Added new config options for all gun projectile damages.