@@ -4,20 +4,16 @@ import java.util.List;
 
 import mod.azure.doom.DoomMod;
 import mod.azure.doom.client.Keybindings;
-import mod.azure.doom.client.render.weapons.SentinelHammerRender;
+import mod.azure.doom.client.render.weapons.DarkLordCrucibleRender;
 import mod.azure.doom.util.packets.DoomPacketHandler;
-import mod.azure.doom.util.packets.weapons.AxeMarauderLoadingPacket;
+import mod.azure.doom.util.packets.weapons.CrucibleLoadingPacket;
 import mod.azure.doom.util.registry.DoomItems;
 import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.AreaEffectCloudEntity;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
-import net.minecraft.particles.ParticleTypes;
-import net.minecraft.potion.EffectInstance;
-import net.minecraft.potion.Effects;
 import net.minecraft.util.ActionResult;
 import net.minecraft.util.DamageSource;
 import net.minecraft.util.Hand;
@@ -42,27 +38,16 @@ import software.bernie.geckolib3.network.GeckoLibNetwork;
 import software.bernie.geckolib3.network.ISyncable;
 import software.bernie.geckolib3.util.GeckoLibUtil;
 
-public class SentinelHammerItem extends Item implements IAnimatable, ISyncable {
+public class DarkLordCrucibleItem extends Item implements IAnimatable, ISyncable {
 
 	public AnimationFactory factory = new AnimationFactory(this);
 	public String controllerName = "controller";
 	public static final int ANIM_OPEN = 0;
 
-	public SentinelHammerItem() {
+	public DarkLordCrucibleItem() {
 		super(new Item.Properties().tab(DoomMod.DoomWeaponItemGroup).stacksTo(1).durability(5)
-				.setISTER(() -> SentinelHammerRender::new));
+				.setISTER(() -> DarkLordCrucibleRender::new));
 		GeckoLibNetwork.registerSyncable(this);
-	}
-
-	@Override
-	@OnlyIn(Dist.CLIENT)
-	public void appendHoverText(ItemStack stack, World worldIn, List<ITextComponent> tooltip, ITooltipFlag flagIn) {
-//		tooltip.add(new TranslationTextComponent("doom.marauder_axe1.text").withStyle(TextFormatting.RED)
-//				.withStyle(TextFormatting.ITALIC));
-		tooltip.add(new TranslationTextComponent(
-				"Ammo: " + (stack.getMaxDamage() - stack.getDamageValue() - 1) + " / " + (stack.getMaxDamage() - 1))
-						.withStyle(TextFormatting.ITALIC));
-		super.appendHoverText(stack, worldIn, tooltip, flagIn);
 	}
 
 	@Override
@@ -71,16 +56,9 @@ public class SentinelHammerItem extends Item implements IAnimatable, ISyncable {
 			PlayerEntity playerentity = (PlayerEntity) entityLiving;
 			if (stack.getDamageValue() < (stack.getMaxDamage() - 1)) {
 				playerentity.getCooldowns().addCooldown(this, 200);
-				final AxisAlignedBB aabb = new AxisAlignedBB(entityLiving.blockPosition().above()).inflate(5D, 5D, 5D);
+				final AxisAlignedBB aabb = new AxisAlignedBB(entityLiving.blockPosition().above()).inflate(4D, 1D, 4D);
 				entityLiving.getCommandSenderWorld().getEntities(entityLiving, aabb)
 						.forEach(e -> doDamage(entityLiving, e));
-				AreaEffectCloudEntity areaeffectcloudentity = new AreaEffectCloudEntity(playerentity.level,
-						playerentity.getX(), playerentity.getY(), playerentity.getZ());
-				areaeffectcloudentity.setParticle(ParticleTypes.CRIT);
-				areaeffectcloudentity.setRadius(5.0F);
-				areaeffectcloudentity.setDuration(20);
-				areaeffectcloudentity.setPos(playerentity.getX(), playerentity.getY(), playerentity.getZ());
-				worldIn.addFreshEntity(areaeffectcloudentity);
 				stack.hurtAndBreak(1, entityLiving, p -> p.broadcastBreakEvent(entityLiving.getUsedItemHand()));
 				if (!worldIn.isClientSide) {
 					final int id = GeckoLibUtil.guaranteeIDForStack(stack, (ServerWorld) worldIn);
@@ -95,8 +73,7 @@ public class SentinelHammerItem extends Item implements IAnimatable, ISyncable {
 	private void doDamage(LivingEntity user, final Entity target) {
 		if (target instanceof LivingEntity) {
 			target.invulnerableTime = 0;
-			((LivingEntity) target).addEffect(new EffectInstance(Effects.MOVEMENT_SLOWDOWN, 1000, 2));
-			target.hurt(DamageSource.playerAttack((PlayerEntity) user), 25F);
+			target.hurt(DamageSource.playerAttack((PlayerEntity) user), 200F);
 		}
 	}
 
@@ -127,22 +104,31 @@ public class SentinelHammerItem extends Item implements IAnimatable, ISyncable {
 	}
 
 	@Override
+	@OnlyIn(Dist.CLIENT)
+	public void appendHoverText(ItemStack stack, World worldIn, List<ITextComponent> tooltip, ITooltipFlag flagIn) {
+		tooltip.add(new TranslationTextComponent(
+				"Ammo: " + (stack.getMaxDamage() - stack.getDamageValue() - 1) + " / " + (stack.getMaxDamage() - 1))
+						.withStyle(TextFormatting.ITALIC));
+		super.appendHoverText(stack, worldIn, tooltip, flagIn);
+	}
+
+	@Override
 	public void inventoryTick(ItemStack stack, World worldIn, Entity entityIn, int itemSlot, boolean isSelected) {
 		PlayerEntity playerentity = (PlayerEntity) entityIn;
 		if (worldIn.isClientSide) {
-			if (playerentity.getMainHandItem().getItem() instanceof SentinelHammerItem) {
+			if (playerentity.getMainHandItem().getItem() instanceof DarkLordCrucibleItem) {
 				while (Keybindings.RELOAD.consumeClick() && isSelected) {
-					DoomPacketHandler.SENTINELHAMMER.sendToServer(new AxeMarauderLoadingPacket(itemSlot));
+					DoomPacketHandler.CRUCIBLE.sendToServer(new CrucibleLoadingPacket(itemSlot));
 				}
 			}
 		}
 	}
 
 	public static void reload(PlayerEntity user, Hand hand) {
-		if (user.getItemInHand(hand).getItem() instanceof SentinelHammerItem) {
+		if (user.getItemInHand(hand).getItem() instanceof DarkLordCrucibleItem) {
 			while (user.getItemInHand(hand).getDamageValue() != 0
-					&& user.inventory.countItem(DoomItems.ARGENT_ENERGY.get()) > 0) {
-				removeAmmo(DoomItems.ARGENT_ENERGY.get(), user);
+					&& user.inventory.countItem(DoomItems.ARGENT_BLOCK.get()) > 0) {
+				removeAmmo(DoomItems.ARGENT_BLOCK.get(), user);
 				user.getItemInHand(hand).hurtAndBreak(-5, user, s -> user.broadcastBreakEvent(hand));
 				user.getItemInHand(hand).setPopTime(3);
 			}
@@ -182,5 +168,4 @@ public class SentinelHammerItem extends Item implements IAnimatable, ISyncable {
 	public int getUseDuration(ItemStack stack) {
 		return 7200;
 	}
-
 }
