@@ -1,0 +1,40 @@
+package mod.azure.doom.util.packets.weapons;
+
+import java.util.function.Supplier;
+
+import mod.azure.doom.item.weapons.DarkLordCrucibleItem;
+import net.minecraft.entity.player.ServerPlayerEntity;
+import net.minecraft.network.INetHandler;
+import net.minecraft.network.PacketBuffer;
+import net.minecraft.network.play.ServerPlayNetHandler;
+import net.minecraft.util.Hand;
+import net.minecraftforge.fml.network.NetworkEvent;
+
+public class DarkLordCrucibleLoadingPacket {
+
+	public int slot;
+
+	public DarkLordCrucibleLoadingPacket(int slot) {
+		this.slot = slot;
+	}
+
+	public DarkLordCrucibleLoadingPacket(final PacketBuffer packetBuffer) {
+		this.slot = packetBuffer.readInt();
+	}
+
+	public void encode(final PacketBuffer packetBuffer) {
+		packetBuffer.writeInt(this.slot);
+	}
+
+	public static void handle(DarkLordCrucibleLoadingPacket packet, Supplier<NetworkEvent.Context> ctx) {
+		ctx.get().enqueueWork(() -> {
+			NetworkEvent.Context context = ctx.get();
+			INetHandler handler = context.getNetworkManager().getPacketListener();
+			if (handler instanceof ServerPlayNetHandler) {
+				ServerPlayerEntity playerEntity = ((ServerPlayNetHandler) handler).player;
+				DarkLordCrucibleItem.reload(playerEntity, Hand.MAIN_HAND);
+			}
+		});
+		ctx.get().setPacketHandled(true);
+	}
+}
