@@ -65,6 +65,7 @@ import mod.azure.doom.item.weapons.Ballista;
 import mod.azure.doom.item.weapons.Chaingun;
 import mod.azure.doom.item.weapons.Chainsaw;
 import mod.azure.doom.item.weapons.ChainsawAnimated;
+import mod.azure.doom.item.weapons.DarkLordCrucibleItem;
 import mod.azure.doom.item.weapons.HeavyCannon;
 import mod.azure.doom.item.weapons.PistolItem;
 import mod.azure.doom.item.weapons.PlasmaGun;
@@ -364,6 +365,8 @@ public class DoomItems {
 	public static final RegistryObject<Item> HEAVYCANNON = ITEMS.register("heavycannon", () -> new HeavyCannon());
 	public static final RegistryObject<Item> SENTINELHAMMER = ITEMS.register("sentinelhammer",
 			() -> new SentinelHammerItem());
+	public static final RegistryObject<Item> DARKLORDCRUCIBLE = ITEMS.register("darklordcrucible",
+			() -> new DarkLordCrucibleItem());
 
 	// ARMOR
 	public static final RegistryObject<Item> DOOM_HELMET = ITEMS.register("doom_helmet",
