@@ -1,0 +1,196 @@
+{
+	"format_version": "1.12.0",
+	"minecraft:geometry": [
+		{
+			"description": {
+				"identifier": "geometry.cruciblesword",
+				"texture_width": 32,
+				"texture_height": 32,
+				"visible_bounds_width": 3,
+				"visible_bounds_height": 5,
+				"visible_bounds_offset": [0, 1.5, 0]
+			},
+			"bones": [
+				{
+					"name": "group",
+					"pivot": [0, -7.7, 1]
+				},
+				{
+					"name": "handle",
+					"parent": "group",
+					"pivot": [0, 7.3, 1],
+					"cubes": [
+						{
+							"origin": [-10.5, 1.3, 0.5],
+							"size": [21, 42, 0.01],
+							"uv": {
+								"north": {"uv": [11, 32], "uv_size": [21, -32]},
+								"south": {"uv": [32, 32], "uv_size": [-21, -32]}
+							}
+						},
+						{
+							"origin": [-1.5, -4.7, -1],
+							"size": [3, 3, 3],
+							"uv": {
+								"north": {"uv": [0, 14], "uv_size": [3, 3]},
+								"east": {"uv": [0, 14], "uv_size": [3, 3]},
+								"south": {"uv": [0, 14], "uv_size": [3, 3]},
+								"west": {"uv": [0, 14], "uv_size": [3, 3]},
+								"up": {"uv": [3, 13], "uv_size": [-3, -1]},
+								"down": {"uv": [3, 17], "uv_size": [-3, -5]}
+							}
+						},
+						{
+							"origin": [-2.5, -1.7, -2],
+							"size": [5, 5, 5],
+							"uv": {
+								"north": {"uv": [4, 17], "uv_size": [4, 5]},
+								"east": {"uv": [7, 17], "uv_size": [1, 5]},
+								"south": {"uv": [4, 17], "uv_size": [4, 5]},
+								"west": {"uv": [7, 17], "uv_size": [1, 5]},
+								"up": {"uv": [8, 15], "uv_size": [-5, -1]},
+								"down": {"uv": [3, 20], "uv_size": [-3, -1]}
+							}
+						},
+						{
+							"origin": [-1.5, -11.7, -1],
+							"size": [3, 7, 3],
+							"uv": {
+								"north": {"uv": [0, 20], "uv_size": [3, 7]},
+								"east": {"uv": [0, 20], "uv_size": [3, 7]},
+								"south": {"uv": [0, 20], "uv_size": [3, 7]},
+								"west": {"uv": [0, 20], "uv_size": [3, 7]},
+								"up": {"uv": [3, 27], "uv_size": [-3, -7]},
+								"down": {"uv": [3, 27], "uv_size": [-3, -7]}
+							}
+						},
+						{
+							"origin": [-2.5, -16.7, -2],
+							"size": [5, 5, 5],
+							"uv": {
+								"north": {"uv": [0, 27], "uv_size": [5, 5]},
+								"east": {"uv": [0, 27], "uv_size": [5, 5]},
+								"south": {"uv": [0, 27], "uv_size": [5, 5]},
+								"west": {"uv": [0, 27], "uv_size": [5, 5]},
+								"up": {"uv": [5, 28], "uv_size": [-5, -1]},
+								"down": {"uv": [4, 32], "uv_size": [-3, -1]}
+							}
+						}
+					]
+				},
+				{
+					"name": "back",
+					"parent": "handle",
+					"pivot": [0.8, -0.7, 1],
+					"rotation": [0, 0, -10],
+					"cubes": [
+						{
+							"origin": [2.3, -1.7, 0],
+							"size": [2, 4, 1],
+							"uv": {
+								"north": {"uv": [0, 13], "uv_size": [2, 4]},
+								"east": {"uv": [0, 13], "uv_size": [2, 4]},
+								"south": {"uv": [1, 13], "uv_size": [2, 4]},
+								"west": {"uv": [1, 13], "uv_size": [1, 4]},
+								"up": {"uv": [4, 11], "uv_size": [-1, -2]},
+								"down": {"uv": [1, 12], "uv_size": [-1, -2]}
+							}
+						},
+						{
+							"origin": [4.3, -0.7, 0],
+							"size": [2, 3, 1],
+							"uv": {
+								"north": {"uv": [0, 13], "uv_size": [2, 3]},
+								"east": {"uv": [0, 14], "uv_size": [2, 3]},
+								"south": {"uv": [1, 13], "uv_size": [2, 3]},
+								"west": {"uv": [1, 14], "uv_size": [1, 3]},
+								"up": {"uv": [4, 11], "uv_size": [-1, -2]},
+								"down": {"uv": [2, 12], "uv_size": [-1, -2]}
+							}
+						},
+						{
+							"origin": [6.3, 0.3, 0],
+							"size": [3, 3, 1],
+							"uv": {
+								"north": {"uv": [0, 14], "uv_size": [3, 3]},
+								"east": {"uv": [2, 14], "uv_size": [1, 3]},
+								"south": {"uv": [0, 14], "uv_size": [3, 3]},
+								"west": {"uv": [2, 14], "uv_size": [1, 3]},
+								"up": {"uv": [4, 12], "uv_size": [-1, -3]},
+								"down": {"uv": [1, 12], "uv_size": [-1, -3]}
+							}
+						},
+						{
+							"origin": [8.3, 1.3, 0],
+							"size": [2, 3, 1],
+							"uv": {
+								"north": {"uv": [1, 14], "uv_size": [2, 3]},
+								"east": {"uv": [1, 14], "uv_size": [1, 3]},
+								"south": {"uv": [1, 13], "uv_size": [2, 3]},
+								"west": {"uv": [2, 14], "uv_size": [1, 3]},
+								"up": {"uv": [4, 11], "uv_size": [-1, -2]},
+								"down": {"uv": [3, 11], "uv_size": [-1, -2]}
+							}
+						}
+					]
+				},
+				{
+					"name": "back2",
+					"parent": "handle",
+					"pivot": [-0.8, -0.7, 1],
+					"rotation": [0, 0, 10],
+					"cubes": [
+						{
+							"origin": [-4.3, -1.7, 0],
+							"size": [2, 4, 1],
+							"uv": {
+								"north": {"uv": [2, 13], "uv_size": [-2, 4]},
+								"east": {"uv": [2, 13], "uv_size": [-1, 4]},
+								"south": {"uv": [3, 13], "uv_size": [-2, 4]},
+								"west": {"uv": [2, 13], "uv_size": [-2, 4]},
+								"up": {"uv": [3, 11], "uv_size": [1, -2]},
+								"down": {"uv": [0, 12], "uv_size": [1, -2]}
+							}
+						},
+						{
+							"origin": [-6.3, -0.7, 0],
+							"size": [2, 3, 1],
+							"uv": {
+								"north": {"uv": [2, 13], "uv_size": [-2, 3]},
+								"east": {"uv": [2, 14], "uv_size": [-1, 3]},
+								"south": {"uv": [3, 13], "uv_size": [-2, 3]},
+								"west": {"uv": [2, 14], "uv_size": [-2, 3]},
+								"up": {"uv": [3, 11], "uv_size": [1, -2]},
+								"down": {"uv": [1, 12], "uv_size": [1, -2]}
+							}
+						},
+						{
+							"origin": [-9.3, 0.3, 0],
+							"size": [3, 3, 1],
+							"uv": {
+								"north": {"uv": [3, 14], "uv_size": [-3, 3]},
+								"east": {"uv": [3, 14], "uv_size": [-1, 3]},
+								"south": {"uv": [3, 14], "uv_size": [-3, 3]},
+								"west": {"uv": [3, 14], "uv_size": [-1, 3]},
+								"up": {"uv": [3, 12], "uv_size": [1, -3]},
+								"down": {"uv": [0, 12], "uv_size": [1, -3]}
+							}
+						},
+						{
+							"origin": [-10.3, 1.3, 0],
+							"size": [2, 3, 1],
+							"uv": {
+								"north": {"uv": [3, 14], "uv_size": [-2, 3]},
+								"east": {"uv": [3, 14], "uv_size": [-1, 3]},
+								"south": {"uv": [3, 13], "uv_size": [-2, 3]},
+								"west": {"uv": [2, 14], "uv_size": [-1, 3]},
+								"up": {"uv": [3, 11], "uv_size": [1, -2]},
+								"down": {"uv": [2, 11], "uv_size": [1, -2]}
+							}
+						}
+					]
+				}
+			]
+		}
+	]
+}
