@@ -44,6 +44,7 @@
 	"item.doom.supershotgun": "Super Shotgun",
 	"item.doom.cruciblesword_closed": "Crucible Sword (Expired)",
 	"item.doom.cruciblesword": "Crucible Sword",
+	"item.doom.darklordcrucible": "Dark Lord Crucible",
 	"item.doom.axe_marauder_closed": "Marauder Argent Axe (Expired)",
 	"item.doom.axe_marauder_open": "Marauder Argent Axe",
 	"item.doom.doom_helmet": "Doom Helmet",
