@@ -1,0 +1,25 @@
+{
+	"type": "doom:gun_table",
+	"pattern": "abcd",
+	"key": {
+		"a": {
+			"item": "doom:argent_energy",
+			"count": 64
+		},
+		"b": {
+			"item": "minecraft:ghast_tear",
+			"count": 4
+		},
+		"c": {
+			"item": "minecraft:nether_star",
+			"count": 3
+		},
+		"d": {
+			"item": "minecraft:nether_brick",
+			"count": 1
+		}
+	},
+	"result": {
+		"item": "doom:darklordcrucible"
+	}
+}
